A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, German, Greek, Hungarian, Japanese, Latvian, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle SQL selects (dimir)

Bug fixes:
..F....... [ZBX-6133] fixed undefined indexes when importing hosts with "Update existing" disabled (Pavels)
..F....... [ZBX-6122] fixed error when trying to create an IT service and submitting an incorrectly filled form (Pavels)
.......PS. [ZBX-6101] fixed processing of SNMP traps in maintenance "with data colleaction"; thanks to Volker Fröhlich for patch (Sasha)
.......PS. [ZBX-6012] added support of user macros and global regular expressions in SNMP trap item key parameter (Sasha)
.......PS. [ZBX-5973] faster build up of SNMP dynamic index items cache in poller processes (Andris)
A......... [ZBX-3534] fixed templated linking using read-only template (Eduard)
..F....... [ZBX-5458] fixed some date strings are not being translated (Toms)
..F....... [ZBX-6110] fixed selected map remembering in monitoring->map (Eduard)
..F....... [ZBX-6117] fixed item value macros resolving using non-converted to null values (Eduard)
..F....... [ZBX-6113] fixed hidden input field appearing when assigning hosts to groups in IE (Pavels)
..F....... [ZBX-6063] fixed graph selection pop up working incorrectly when adding a graph to a templated screen (Pavels)
A.F....... [ZBX-6014] improved performance in most it services pages and pages that retrieve trigger information (dotneft, Oleg)
..F....... [ZBX-6070] fixed event CSV export ignoring the selected page and filters (Pavels)
..F....... [ZBX-6006] optimized web interface API calls, which requested redundant data (Toms)
A......... [ZBX-5806] fixed template.massadd and template.massremove returning an empty hostids array (Pavels)
...G...... [ZBX-5201] added handling of PerfCounter error PDH_CALC_NEGATIVE_DENOMINATOR (dimir)